--- a/rttfcar_commander/style.css
+++ b/rttfcar_commander/style.css
@@ -1,3 +1,7 @@
+header {
+    text-align: center;
+}
+
 .result {
     display: block;
     margin-top: 80px auto;
@@ -8,6 +12,9 @@
 }
 
 button {
+    float: left;
+    display: block;
+    width: 50%;
     padding: 100px;
     font-size: 2.4em;
 }
