--- a/rttfcar_commander/style.css
+++ b/rttfcar_commander/style.css
@@ -1,26 +1,37 @@
+body, html {
+    margin: 0;
+    padding: 20px 0 0 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+
 header {
     text-align: center;
 }
 
 .result {
     display: block;
-    margin-top: 80px auto;
+    margin: 80px auto;
     border: 3px dashed lightgrey;
     padding: 40px;
     text-align: center;
     width: 70%;
+    min-height: 200px;
+    font-size: 1.4em;
+    font-weight: 500;
 }
 
 button {
-    float: left;
+    margin: 10px auto;
     display: block;
-    width: 50%;
+    width: 80%;
     padding: 100px;
     font-size: 2.4em;
 }
 
 input {
-    font-size: 1.8em;
+    font-size: 2.6em;
     padding: 12px;
     margin: 20px;
+    text-align: center;
 }
